Use moxielogic namespace.  Can't seem to create libffi on dockerhub

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ services:
   - docker
 
 before_install:
-  - docker build -f Dockerfile.arm32 -t libffi/arm32-ci-build-container .
-  - docker build -f Dockerfile.aarch64 -t libffi/aarch64-ci-build-container .
+  - docker build -f Dockerfile.arm32 -t moxielogic/arm32-ci-build-container .
+  - docker build -f Dockerfile.aarch64 -t moxielogic/aarch64-ci-build-container .
 
 script:
 - 
@@ -20,9 +20,9 @@ after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
       for ARCH in arm32 aarch64; do
-        docker tag libffi/${ARCH}-ci-build-container:latest libffi/${ARCH}-ci-build-container:$COMMIT;
-        docker push libffi/${ARCH}-ci-build-container:latest;
-        docker push libffi/${ARCH}-ci-build-container:$COMMIT;
+        docker tag moxielogic/${ARCH}-ci-build-container:latest moxielogic/${ARCH}-ci-build-container:$COMMIT;
+        docker push moxielogic/${ARCH}-ci-build-container:latest;
+        docker push moxielogic/${ARCH}-ci-build-container:$COMMIT;
       done;
     fi
   - echo All done.
