--- a/Dockerfile.arm32
+++ b/Dockerfile.arm32
@@ -1,5 +1,5 @@
 FROM arm32v7/debian:stretch-slim
 
 RUN apt-get update && \
-    apt-get install -y gcc dejagnu make texinfo sharutils gzip git
+    apt-get install -y gcc dejagnu make texinfo sharutils gzip git \
     apt-get clean
