--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,6 +1,6 @@
 FROM aarch64/ubuntu:latest
 
-COPY /usr/bin/qemu-aarch64-static /usr/bin/qemu-aarch64-static
+COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
 RUN apt-get update && \
     apt-get install -y gcc dejagnu make texinfo sharutils gzip git && \
     apt-get clean
