--- a/Dockerfile.arm32
+++ b/Dockerfile.arm32
@@ -1,6 +1,6 @@
 FROM arm32v7/debian:stretch-slim
 
-COPY /usr/bin/qemu-arm-static /usr/bin/qemu-arm-static
+COPY qemu-arm-static /usr/bin/qemu-arm-static
 RUN apt-get update && \
     apt-get install -y gcc dejagnu make texinfo sharutils gzip git && \
     apt-get clean
