--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,4 +1,4 @@
-FROM aarch64/ubuntu:latest
+FROM arm64v8/bash:latest
 
 COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
 RUN apt-get update && \
