--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,6 +1,5 @@
-FROM arm64v8/bash:latest
+FROM arm64v8/fedora:latest
 
 COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
-RUN apt-get update && \
-    apt-get install -y gcc dejagnu make texinfo sharutils gzip git && \
-    apt-get clean
+RUN dnf install -y gcc dejagnu make texinfo sharutils gzip git && \
+    dnf clean all
