Add ppc64le Fedora

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,10 @@ before_install:
   - sudo apt-get install qemu-user-static
   - cp /usr/bin/qemu-arm-static .
   - cp /usr/bin/qemu-aarch64-static .
+  - cp /usr/bin/qemu-ppc64le-static .
   - docker build -f Dockerfile.arm32 -t moxielogic/arm32-ci-build-container .
   - docker build -f Dockerfile.aarch64 -t moxielogic/aarch64-ci-build-container .
+  - docker build -f Dockerfile.ppc64le -t moxielogic/ppc64le-ci-build-container .
 
 script:
 - 
@@ -22,7 +24,7 @@ script:
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-      for ARCH in arm32 aarch64; do
+      for ARCH in arm32 aarch64 ppc64le; do
         docker tag moxielogic/${ARCH}-ci-build-container:latest moxielogic/${ARCH}-ci-build-container:$COMMIT;
         docker push moxielogic/${ARCH}-ci-build-container:latest;
         docker push moxielogic/${ARCH}-ci-build-container:$COMMIT;
