--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ before_install:
   - sudo apt-get install qemu-user-static
   - cp /usr/bin/qemu-arm-static .
   - cp /usr/bin/qemu-aarch64-static .
-  - cp /usr/bin/qemu-ppc64le-static .
   - cp /usr/bin/qemu-s390x-static .
-  - docker build -f Dockerfile.aarch64 -t moxielogic/aarch64-ci-build-container .
-  - docker build -f Dockerfile.s390x -t moxielogic/s390x-ci-build-container .
+  - travis_wait 30 docker build -f Dockerfile.aarch64 -t moxielogic/aarch64-ci-build-container .
+  - travis_wait 30 docker build -f Dockerfile.s390x -t moxielogic/s390x-ci-build-container .
 
 # ppc64le currently causes an illegal instruction error
+#  - cp /usr/bin/qemu-ppc64le-static .
 #  - docker build -f Dockerfile.ppc64le -t moxielogic/ppc64le-ci-build-container .
 
 script:
