--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,5 +1,5 @@
 FROM arm64v8/fedora:latest
 
 COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
-RUN dnf install -y gcc dejagnu make texinfo sharutils gzip git && \
+RUN dnf install -y gcc g++ dejagnu make texinfo sharutils gzip git && \
     dnf clean all
