--- a/Dockerfile.arm32
+++ b/Dockerfile.arm32
@@ -2,5 +2,5 @@ FROM arm32v7/debian:stretch-slim
 
 COPY qemu-arm-static /usr/bin/qemu-arm-static
 RUN apt-get update && \
-    apt-get install -y gcc dejagnu make texinfo sharutils gzip git && \
+    apt-get install -y gcc g++ dejagnu make texinfo sharutils gzip git && \
     apt-get clean
