--- a/Dockerfile.arm32v7
+++ b/Dockerfile.arm32v7
@@ -1,5 +1,5 @@
 FROM arm32v7/fedora:latest
 
 COPY qemu-arm-static /usr/bin/qemu-arm-static
-RUN dnf install -y gcc dejagnu make texinfo sharutils gzip git && \
+RUN dnf install -y gcc g++ dejagnu make texinfo sharutils gzip git && \
     dnf clean all
