--- a/Dockerfile.s390x
+++ b/Dockerfile.s390x
@@ -1,5 +1,5 @@
 FROM s390x/fedora:latest
 
 COPY qemu-s390x-static /usr/bin/qemu-s390x-static
-RUN dnf install -y gcc dejagnu make texinfo sharutils gzip git && \
+RUN dnf install -y gcc g++ dejagnu make texinfo sharutils gzip git && \
     dnf clean all
